[metadata]
name = p4_bench_api
version = 0.2.1
author = Johan Paulsson
author_email = johan.paulsson@combitech.com
description = Api for creating network configuration files for benchexec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thaprau/p4_bench_api
project_urls =
    Bug Tracker = https://github.com/thaprau/p4_bench_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src